Starred quote star icon now links to the starred quotes page. Adds a search button to the navigation bar. Removes some of the quote options buttons for smaller screen devices so that the layout is cleaner on mobile. Fixes search results page bug where once you open a search result in a new tab, the existing page's search result view will start having blue and highlighted text again

--- a/app/assets/stylesheets/quotes.css.scss
+++ b/app/assets/stylesheets/quotes.css.scss
@@ -49,12 +49,13 @@ ul.quotes_search {
 }
 
 .quote_search_result_link {
-	color: black;
+	color: black !important;
+	text-decoration: none !important;
 }
 
 .quote_search_result_link:hover {
-	color: black;
-	text-decoration: none;
+	color: black !important;
+	text-decoration: none !important;
 }
 
 .quote_search_result_link .panel-heading {
